--- a/index2.html
+++ b/index2.html
@@ -99,7 +99,7 @@
                 <i class="fa-solid fa-xmark" id="close"></i>
             </div>
             <div class="logo-area">
-                <img src="images/Logo.jpg" alt="Logo">
+                <img src="images2/Logo.jpg" alt="Logo">
             </div>
             <div class="lan">
                 Thai: โซฟิเทล สุขุมวิท โรงแรม <br>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="location">
                     Hotel Location: <br>
-                    <img src="images/Small Photo of Hotel Location on Google Map.png" alt="">
+                    <img src="images2/Small Photo of Hotel Location on Google Map.png" alt="">
                 </div>
             </div>
 
